@@ -179,7 +179,7 @@ QStringList IndicatorPlugin::getMATypes ()
   return l;
 }
 
-PlotLine * IndicatorPlugin::getMA (PlotLine *in, int type, int period)
+PlotLine * IndicatorPlugin::getMA (PlotLine *in, int type, int period, double fre, double wid)
 {
   PlotLine *ma = 0;
   Config config;
@@ -192,7 +192,7 @@ PlotLine * IndicatorPlugin::getMA (PlotLine *in, int type, int period)
     return ma;
   }
 
-  ma = plug->getMA(in, type, period);
+  ma = plug->getMA(in, type, period, fre, wid);
   config.closePlugin(s);
   return ma;  
 }
