@@ -69,7 +69,7 @@ class IndicatorPlugin
     virtual int getMinBars ();
     virtual void loadIndicatorSettings (QString &);
     virtual void saveIndicatorSettings (QString &);
-    virtual PlotLine * getMA (PlotLine *d, int, int);
+    virtual PlotLine * getMA (PlotLine *d, int, int, double, double);
     virtual QStringList getMATypes ();
     
   protected:
