@@ -6,9 +6,11 @@ pluginName = MA
 
 HEADERS += MA.h
 HEADERS += qtsFFT.h
+HEADERS += MADialog.h
 
 SOURCES += MA.cpp
 SOURCES += qtsFFT.cpp
+SOURCES += MADialog.cpp
 
 target.path = /usr/lib/qtstalker/indicator
 INSTALLS += target
