@@ -63,11 +63,11 @@ void TRIX::calculate ()
     return;
   }
 
-  PlotLine *ema = getMA(in, 0, period);
+  PlotLine *ema = getMA(in, 0, period, 0, 0);
   
-  PlotLine *ema2 = getMA(ema, 0, period);
+  PlotLine *ema2 = getMA(ema, 0, period, 0, 0);
   
-  PlotLine *ema3 = getMA(ema2, 0, period);
+  PlotLine *ema3 = getMA(ema2, 0, period, 0, 0);
   int emaLoop = ema3->getSize() - 1;
 
   PlotLine *trix = new PlotLine();
@@ -78,7 +78,7 @@ void TRIX::calculate ()
     emaLoop--;
   }
 
-  PlotLine *trigger = getMA(trix, maType, tperiod);
+  PlotLine *trigger = getMA(trix, maType, tperiod, 0, 0);
   trigger->setColor(trigColor);
   trigger->setType(trigLineType);
   trigger->setLabel(trigLabel);
