@@ -32,6 +32,11 @@
 20050530: Fixed bug in chart objects that would remove previous objects and prevented multiple objects of the
           same type from being created.
 
+20050531: Changed function interface in IndicatorPlugin::getMA to allow for Lowpass extra parms.
+
+20050531: Added an enhanced dialog for editing MA's to hide/show unused parms depending on MA type chosen.
+
+
 
 0.31
 ====
